# gw1

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  groups.json  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  fill.py
users/migrations/: 0001_initial.py
